crates/chat/tests/snapshots/chrome__boot_surface_keeps_the_composer_reachable_at_80x24.snap
---
source: crates/chat/tests/chrome.rs
expression: "version_normalized(rows.join(\"\\n\"))"
---
│                          │ Tips                                            │
│      Welcome back!       │ # for prompt actions                            │
│                          │ / for commands                                  │
│       ████████████       │ ! to run bash                                   │
│          ██  ██          │ $ to run python                                 │
│          ██  ██          │ ─────────────────────────────────────────────── │
│          ▒▒  ██          │ LSP Servers                                     │
│              ██          │ No LSP servers                                  │
│                          │                                                 │
│      Claude Fable 5      │                                                 │
│        anthropic         │                                                 │
│                          │ ─────────────────────────────────────────────── │
│                          │ Recent sessions                                 │
│                          │ No recent sessions                              │
│                          │                                                 │
│                          │                                                 │
│                          │                                                 │
│                          │                                                 │
╰──────────────────────────┴─────────────────────────────────────────────────╯
 Tip: Spaghetti code? Try complaining with /omfg


 π  > ⬢ Fable 5 > 📁 omp > ⑂ main ▶─0%───────────────────────────────┃───────1M─
╰─ Ask anything, edit files, run tools
